# package-validation-tool

./: .gitignore  .pylintrc  Makefile  README.md  TESTING.md  THIRD-PARTY-NOTICES  pyproject.toml  setup.cfg  setup.py
.github/workflows/: basic-ci.yml  coverage-check.yml  system-tests.yml  trufflehog.yml
configuration/: README  suggestions_al2023.json  suggestions_common.json  transformations_al2023.json  transformations_common.json
configuration/external_patches/: README  libtool-2.4.6-no_hostname.patch
misc/: AL2-Dockerfile  AL2023-Dockerfile  Fedora40-Dockerfile
src/package_validation_tool/: __init__.py  cli.py  common.py  operation_cache.py  utils.py
src/package_validation_tool/matching/: NOTES.md  __init__.py  autotools.py  changelog.py  file_matching.py
src/package_validation_tool/package/: __init__.py  validation.py
src/package_validation_tool/package/rpm/: __init__.py  source_package.py  spec.py  utils.py
src/package_validation_tool/package/suggesting_archives/: __init__.py  core.py  suggestion_methods.py  transformation_methods.py
src/package_validation_tool/package/suggesting_repos/: __init__.py  core.py  suggestion_methods.py  version_utils.py
test/: conftest.py  docker-testing.sh  system-level-testing.sh  test-in-venv.sh  test_autotools.py  test_changelog.py  test_cli.py  test_match_files.py  test_matching.py  test_package_validation_tool.py  test_result_hashing.py  test_rpm_spec.py  test_rpm_utils.py  test_srpm_archive_matching.py  test_srpm_object.py  test_srpm_repo_matching.py  test_suggest_package_archives.py  test_suggest_package_archives_empty.py  test_suggest_package_archives_simple.py  test_suggest_package_repos.py  test_suggestion_methods.py  test_transformation_methods.py  test_utils.py  test_version_utils.py
test/artefacts/match_examples/: plain.txt  plain_with_dates.txt  plain_with_other_dates.txt
test/artefacts/rpm/: testrpm.spec  testrpm_for_suggesting.spec  testrpm_for_suggesting_empty.spec  testrpm_for_suggesting_repos.spec  testrpm_for_suggesting_simple.spec  testrpm_with_urls.spec
