# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = package-validation-tool
version = 1.0
description = Package-Validation-Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Dmitrii Kuvaiskii
author_email = dimakuv@amazon.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Version Control :: Git

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7

# NOTE: urllib3 does not support Python <=3.8 as of v2.3.0 released in Dec 2024.
# However, e.g. AL2 has Python 3.7 by default (and can install 3.8 from Extras).
# To work around this, we use the "platform specific dependencies" feature of
# setuptools, to install the platform-suitable version of urllib3.
#
# NOTE: bs4 (beautifulsoup) uses typing_extensions that does not support Python
# <=3.8 as of v4.8 released in Jul 2023. See the note above for why this is a
# problem and the workaround.
install_requires =
    bs4
    requests
    chardet
    urllib3<2;python_version<'3.9'
    urllib3;python_version>='3.9'
    typing_extensions<4.8;python_version<'3.9'
    typing_extensions;python_version>='3.9'

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_validation_tool =
    py.typed

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    coverage>=7.0.0
dev =
    black>=23.0.0
    flake8>=7.0.0
    isort>=5.0.0
    mypy>=1.0.0
    pep8-naming>=0.13.0
    pylint>=3.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx>=7.0.0
    types-requests>=2.0.0

[options.entry_points]
console_scripts =
     package-validation-tool = package_validation_tool.cli:main

[tool:pytest]
xfail_strict = true
addopts =
    --verbose
    --cov package_validation_tool
    --cov-config setup.cfg
    --cov-report term-missing
    --cov-report html:htmlcov
    --cov-report xml:coverage.xml
    --durations=5
    --color=yes
testpaths = test

[coverage:run]
branch = true
source = src/

[coverage:paths]
source =
    src/

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

[flake8]
ignore =
    # Not pep8, black adds whitespace before ':'
    E203,
    # Not pep8, black adds line break before binary operator
    W503,
    # Once `make format` (black and isort tools) is run, the only remaining long
    # lines do not matter; we can ignore them.
    E501,
max_line_length = 100
